<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="412dp"
        android:layout_height="57dp"
        android:background="@color/purple_500"
        android:text="TODO_12"
        android:textColor="@color/white"
        android:textSize="70px"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/donut"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:contentDescription="@string/orderdonut"
        android:onClick="donuts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@drawable/watercolour_donut_4363358_1920" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="289dp"
        android:layout_height="171dp"
        android:text="@string/donut"
        android:textSize="60px"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/donut"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.046" />

    <ImageView
        android:id="@+id/ice"
        android:layout_width="177dp"
        android:layout_height="110dp"
        android:onClick="icecream"
        android:scaleX="0.6"
        android:contentDescription="@string/orderice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donut"
        app:layout_constraintVertical_bias="0.233"
        app:srcCompat="@drawable/icecream_3312559_1280" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="287dp"
        android:layout_height="149dp"
        android:text="@string/ice"
        android:textSize="60px"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/ice"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.046" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="117dp"
        android:layout_height="100dp"
        android:onClick="froyo"
        android:contentDescription="@string/orderfroyo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ice"
        app:layout_constraintVertical_bias="0.411"
        app:srcCompat="@drawable/ice_cream_4194801_1280" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="277dp"
        android:layout_height="152dp"
        android:text="@string/froyo"
        android:textSize="60px"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/froyo"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.454" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/image"
        android:padding="10dp"
        android:onClick="call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />

</androidx.constraintlayout.widget.ConstraintLayout>